documentation for sprint 10 established